# explainIt

./: .env  README.md  pyproject.toml  report.md  report2.md
src/explainit/: crew.py  main.py
src/explainit/config/: agents.yaml  tasks.yaml
