[project]
name = "explainit"
version = "0.1.0"
description = "explainIt using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
explainit = "explainit.main:run"
run_crew = "explainit.main:run"
train = "explainit.main:train"
replay = "explainit.main:replay"
test = "explainit.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
